--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #222;
-  height: 1600px; }
+  background-color: #222; }
 
 #polygon {
   background-color: #fff;
@@ -13,20 +12,20 @@ body {
   height: 650px;
   width: 100%; }
 
-.holder {
+.landing-holder {
   position: relative;
   height: 100vh; }
 
 .frame {
   position: absolute;
-  height: 770px;
-  width: 678.4px;
+  height: 97vh;
+  width: 85.5vh;
   left: 7%;
   -webkit-perspective: 1000; }
 
 .head {
   height: 100%;
-  width: 100%;
+  width: 99.7%;
   -webkit-transform-style: preserve-3d; }
 
 .head > div {
@@ -34,6 +33,11 @@ body {
   width: 100%;
   height: 100%;
   background-size: contain; }
+  .head > div div {
+    position: absolute; }
+
+.circle {
+  border-radius: 50%; }
 
 .l10 {
   background: url("../img/l10.png") no-repeat;
@@ -41,47 +45,229 @@ body {
 
 .l9 {
   background: url("../img/l9.png") no-repeat;
-  -webkit-transform: translateZ(4px); }
+  -webkit-transform: translateZ(5px); }
 
 .l8 {
   background: url("../img/l8.png") no-repeat;
-  -webkit-transform: translateZ(8px); }
+  -webkit-transform: translateZ(10px); }
 
 .l7 {
   background: url("../img/l7.png") no-repeat;
-  -webkit-transform: translateZ(12px); }
+  -webkit-transform: translateZ(15px); }
 
 .l6 {
   background: url("../img/l6.png") no-repeat;
-  -webkit-transform: translateZ(16px); }
+  -webkit-transform: translateZ(20px); }
 
 .l5 {
   background: url("../img/l5.png") no-repeat;
-  -webkit-transform: translateZ(20px); }
+  -webkit-transform: translateZ(25px); }
 
 .l4 {
   background: url("../img/l4.png") no-repeat;
-  -webkit-transform: translateZ(24px); }
+  -webkit-transform: translateZ(30px); }
 
 .l3 {
-  background: url("../img/c3.png") no-repeat;
-  -webkit-transform: translateZ(28px);
+  background: url("../img/l3.png") no-repeat;
+  -webkit-transform: translateZ(35px);
   opacity: 0.7; }
 
 .l2 {
   background: url("../img/l2.png") no-repeat;
-  -webkit-transform: translateZ(32px); }
+  -webkit-transform: translateZ(40px); }
 
 .l1 {
   background: url("../img/l1.png") no-repeat;
-  -webkit-transform: translateZ(36px); }
+  -webkit-transform: translateZ(45px); }
 
 .l0 {
   background: url("../img/l0.png") no-repeat;
-  -webkit-transform: translateZ(40px); }
+  -webkit-transform: translateZ(50px); }
+
+.l7 div {
+  height: 3px;
+  width: 3px; }
+
+.l7 .circle:nth-child(1), .l7 .circle:nth-child(23) {
+  top: 12.6%;
+  left: 21.2%;
+  animation: colors 8s infinite; }
+
+.l7 .circle:nth-child(2), .l7 .circle:nth-child(24) {
+  top: 12.9%;
+  left: 22.1%;
+  animation: colors-two 8s infinite; }
+
+.l7 .circle:nth-child(3), .l7 .circle:nth-child(25) {
+  top: 13.2%;
+  left: 23%;
+  animation: colors-three 8s infinite; }
+
+.l7 .circle:nth-child(4), .l7 .circle:nth-child(26) {
+  top: 13.53%;
+  left: 23.9%;
+  animation: colors-four 8s infinite; }
+
+.l7 .circle:nth-child(5), .l7 .circle:nth-child(27) {
+  top: 13.9%;
+  left: 24.7%;
+  animation: colors-five 8s infinite; }
+
+.l7 .circle:nth-child(6), .l7 .circle:nth-child(28) {
+  top: 14.3%;
+  left: 25.6%;
+  animation: colors-six 8s infinite; }
+
+.l7 .circle:nth-child(7), .l7 .circle:nth-child(29) {
+  top: 14.8%;
+  left: 26.4%;
+  animation: colors 8s infinite; }
+
+.l7 .circle:nth-child(8), .l7 .circle:nth-child(30) {
+  top: 15.2%;
+  left: 27.25%;
+  animation: colors-two 8s infinite; }
+
+.l7 .circle:nth-child(9), .l7 .circle:nth-child(31) {
+  top: 15.7%;
+  left: 28.1%;
+  animation: colors-three 8s infinite; }
+
+.l7 .circle:nth-child(10), .l7 .circle:nth-child(32) {
+  top: 16.2%;
+  left: 28.9%;
+  animation: colors-four 8s infinite; }
+
+.l7 .circle:nth-child(11), .l7 .circle:nth-child(33) {
+  top: 16.78%;
+  left: 29.7%;
+  animation: colors-five 8s infinite; }
+
+.l7 .circle:nth-child(12), .l7 .circle:nth-child(34) {
+  top: 17.4%;
+  left: 30.5%;
+  animation: colors-six 8s infinite; }
+
+.l7 .circle:nth-child(13), .l7 .circle:nth-child(35) {
+  top: 18.1%;
+  left: 31.4%;
+  animation: colors 8s infinite; }
+
+.l7 .circle:nth-child(14), .l7 .circle:nth-child(36) {
+  top: 18.8%;
+  left: 32.1%;
+  animation: colors-two 8s infinite; }
+
+.l7 .circle:nth-child(15), .l7 .circle:nth-child(37) {
+  top: 19.53%;
+  left: 32.9%;
+  animation: colors-three 8s infinite; }
+
+.l7 .circle:nth-child(16), .l7 .circle:nth-child(38) {
+  top: 20.4%;
+  left: 33.65%;
+  animation: colors-four 8s infinite; }
+
+.l7 .circle:nth-child(17), .l7 .circle:nth-child(39) {
+  top: 21.3%;
+  left: 34.1%;
+  animation: colors-five 8s infinite; }
+
+.l7 .circle:nth-child(18), .l7 .circle:nth-child(40) {
+  top: 22.2%;
+  left: 34.5%;
+  animation: colors-six 8s infinite; }
+
+.l7 .circle:nth-child(19), .l7 .circle:nth-child(41) {
+  top: 23.1%;
+  left: 34.8%;
+  animation: colors 8s infinite; }
+
+.l7 .circle:nth-child(20), .l7 .circle:nth-child(42) {
+  top: 24.1%;
+  left: 34.83%;
+  animation: colors-two 8s infinite; }
+
+.l7 .circle:nth-child(21), .l7 .circle:nth-child(43) {
+  top: 24.95%;
+  left: 34.8%;
+  animation: colors-three 8s infinite; }
+
+.l7 .circle:nth-child(22), .l7 .circle:nth-child(44) {
+  top: 25.8%;
+  left: 34.5%;
+  animation: colors-four 8s infinite; }
+
+.l7 .circle:nth-child(23) {
+  right: 21.2%; }
+
+.l7 .circle:nth-child(24) {
+  right: 22.1%; }
+
+.l7 .circle:nth-child(25) {
+  right: 23%; }
+
+.l7 .circle:nth-child(26) {
+  right: 23.9%; }
+
+.l7 .circle:nth-child(27) {
+  right: 24.7%; }
+
+.l7 .circle:nth-child(28) {
+  right: 25.6%; }
+
+.l7 .circle:nth-child(29) {
+  right: 26.4%; }
+
+.l7 .circle:nth-child(30) {
+  right: 27.25%; }
+
+.l7 .circle:nth-child(31) {
+  right: 28.1%; }
+
+.l7 .circle:nth-child(32) {
+  right: 28.9%; }
+
+.l7 .circle:nth-child(33) {
+  right: 29.7%; }
+
+.l7 .circle:nth-child(34) {
+  right: 30.5%; }
+
+.l7 .circle:nth-child(35) {
+  right: 31.4%; }
+
+.l7 .circle:nth-child(36) {
+  right: 32.1%; }
+
+.l7 .circle:nth-child(37) {
+  right: 32.9%; }
+
+.l7 .circle:nth-child(38) {
+  right: 33.65%; }
+
+.l7 .circle:nth-child(39) {
+  right: 34.1%; }
+
+.l7 .circle:nth-child(40) {
+  right: 34.5%; }
+
+.l7 .circle:nth-child(41) {
+  right: 34.8%; }
+
+.l7 .circle:nth-child(42) {
+  right: 34.83%; }
+
+.l7 .circle:nth-child(43) {
+  right: 34.8%; }
+
+.l7 .circle:nth-child(44) {
+  right: 34.5%; }
+
+.l7 .right {
+  left: auto !important; }
 
 .l6 div {
-  position: absolute;
   border-radius: 50%;
   opacity: 0.7; }
 
@@ -90,49 +276,49 @@ body {
   height: 15.3px;
   left: 32.7%;
   top: 69.07%;
-  animation: colors 12s infinite; }
+  animation: colors 8s infinite; }
 
 .l6 .circle-1-left, .l6 .circle-1-right {
   width: 2%;
   height: 2%;
   left: 29.8%;
   top: 67.07%;
-  animation: colors-two 12s infinite; }
+  animation: colors-four 8s infinite; }
 
 .l6 .circle-2-left, .l6 .circle-2-right {
   width: 12.2px;
   height: 12.2px;
   left: 27.7%;
   top: 64.7%;
-  animation: colors-three 12s infinite; }
+  animation: colors-two 8s infinite; }
 
 .l6 .circle-3-left, .l6 .circle-3-right {
   width: 11.1px;
   height: 11.1px;
   left: 26%;
   top: 62.6%;
-  animation: colors 12s infinite; }
+  animation: colors-five 8s infinite; }
 
 .l6 .circle-4-left, .l6 .circle-4-right {
   width: 10px;
   height: 10px;
   left: 24.7%;
   top: 60.6%;
-  animation: colors-two 12s infinite; }
+  animation: colors-three 8s infinite; }
 
 .l6 .circle-5-left, .l6 .circle-5-right {
   width: 8.2px;
   height: 8.2px;
   left: 23.5%;
   top: 58.7%;
-  animation: colors-three 12s infinite; }
+  animation: colors-six 8s infinite; }
 
 .l6 .circle-6-left, .l6 .circle-6-right {
   width: 6.2px;
   height: 6.2px;
   left: 22.7%;
   top: 56.94%;
-  animation: colors 12s infinite; }
+  animation: colors 8s infinite; }
 
 .l6 .circle-0-right {
   left: auto;
@@ -163,7 +349,6 @@ body {
   right: 22.7%; }
 
 .l5 .diamond {
-  position: absolute;
   opacity: 0.5;
   left: 46.4%;
   top: 25.2%;
@@ -171,10 +356,31 @@ body {
   width: 7%;
   -webkit-clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%);
   clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%);
-  animation: colors 12s infinite; }
+  animation: colors 8s infinite; }
+
+.l5 div {
+  opacity: 0.6;
+  left: 48.4%;
+  top: 46.2%;
+  width: 3%;
+  height: 2%;
+  -webkit-clip-path: polygon(50% 100%, 0 0, 100% 0);
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
+  animation: colors-three 8s infinite; }
+
+.l5 .triangle-2 {
+  top: 48.2%;
+  animation: colors 8s infinite; }
+
+.l5 .triangle-3 {
+  top: 50.2%;
+  animation: colors-four 8s infinite; }
+
+.l5 .triangle-4 {
+  top: 52.2%;
+  animation: colors-two 8s infinite; }
 
 .l4 div {
-  position: absolute;
   border-radius: 50%;
   opacity: 0.7; }
 
@@ -183,28 +389,28 @@ body {
   height: 2%;
   left: 33.3%;
   top: 36.3%;
-  animation: colors-two 12s infinite; }
+  animation: colors-four 8s infinite; }
 
 .l4 .circle-2-left, .l4 .circle-2-right {
   width: 1.4%;
   height: 1.4%;
   left: 35.5%;
   top: 34.8%;
-  animation: colors-three 12s infinite; }
+  animation: colors 8s infinite; }
 
 .l4 .circle-3-left, .l4 .circle-3-right {
   width: 1.1%;
   height: 1.1%;
   left: 37.5%;
   top: 33.6%;
-  animation: colors 12s infinite; }
+  animation: colors-six 8s infinite; }
 
 .l4 .circle-4-left, .l4 .circle-4-right {
   width: 0.7%;
   height: 0.7%;
   left: 39.3%;
   top: 32.7%;
-  animation: colors-two 12s infinite; }
+  animation: colors-three 8s infinite; }
 
 .l4 .circle-1-right {
   left: auto;
@@ -223,9 +429,8 @@ body {
   right: 39.3%; }
 
 .triangle {
-  position: absolute;
-  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%); }
+  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important;
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%) !important; }
 
 .l2 .triangle {
   opacity: 0.4;
@@ -233,7 +438,83 @@ body {
   width: 39.7px;
   left: 47%;
   top: 38.3%;
-  animation: colors 12s infinite; }
+  animation: colors-five 8s infinite; }
+
+.l1 div {
+  opacity: 0.6;
+  height: 1.3%;
+  width: 1.3%;
+  -webkit-clip-path: polygon(20% 100%, 0 0, 100% 20%);
+  clip-path: polygon(20% 100%, 0 0, 100% 20%); }
+
+.l1 .eye-1 {
+  top: 49.4%;
+  left: 30%;
+  animation: colors 8s infinite; }
+
+.l1 .eye-2 {
+  top: 49.7%;
+  left: 31.35%;
+  animation: colors-four 8s infinite; }
+
+.l1 .eye-3 {
+  top: 50%;
+  left: 32.7%;
+  animation: colors-two 8s infinite; }
+
+.l1 .eye-4 {
+  top: 50.3%;
+  left: 34.05%;
+  animation: colors-five 8s infinite; }
+
+.l1 .eye-5 {
+  top: 50.6%;
+  left: 35.4%;
+  animation: colors-three 8s infinite; }
+
+.l1 .eye-6 {
+  top: 50.9%;
+  left: 36.75%;
+  animation: colors-six 8s infinite; }
+
+.l1 .eye-7 {
+  top: 51.2%;
+  left: 38.1%;
+  animation: colors 8s infinite; }
+
+.l1 .eye-8 {
+  top: 51.5%;
+  left: 39.45%;
+  animation: colors-four 8s infinite; }
+
+.l1 .right {
+  left: auto;
+  -webkit-clip-path: polygon(80% 100%, 0 20%, 100% 0);
+  clip-path: polygon(80% 100%, 0 20%, 100% 0); }
+
+.l1 .eye-1.right {
+  right: 30%; }
+
+.l1 .eye-2.right {
+  right: 31.35%; }
+
+.l1 .eye-3.right {
+  right: 32.7%; }
+
+.l1 .eye-4.right {
+  right: 34.05%; }
+
+.l1 .eye-5.right {
+  right: 35.4%; }
+
+.l1 .eye-6.right {
+  right: 36.75%; }
+
+.l1 .eye-7.right {
+  right: 38.1%; }
+
+.l1 .eye-8.right {
+  right: 39.45%; }
 
 .l1 .triangle {
   opacity: 0.5;
@@ -241,14 +522,54 @@ body {
   width: 29px;
   left: 47.8%;
   top: 40.3%;
-  animation: colors-two 12s infinite; }
+  animation: colors-two 8s infinite; }
+
+.necklace-svg svg {
+  position: absolute;
+  top: 77%;
+  width: 70%;
+  left: 15%; }
+
+#necklace path {
+  animation: fillup 8s infinite; }
+
+.work-holder {
+  height: 100vh;
+  width: 100%;
+  position: relative; }
+  .work-holder div {
+    position: absolute;
+    background: #fff; }
+  .work-holder #triangle-left {
+    width: 147%;
+    height: 55%;
+    right: 0;
+    -webkit-clip-path: polygon(100% 0%, 60% 100%, 0 0%);
+    clip-path: polygon(100% 0%, 60% 100%, 0 0%); }
+  .work-holder #triangle-right {
+    height: 50%;
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%); }
 
 @keyframes colors {
   0% {
     background-color: #FF339B; }
-  25% {
+  16.5% {
     background-color: #FFF966; }
-  50% {
+  82.5% {
+    background-color: #41C0FF; }
+  100% {
+    background-color: #FF339B; } }
+
+@keyframes colors-two {
+  0% {
+    background-color: #FF339B; }
+  33% {
+    background-color: #FFF966; }
+  66% {
     background-color: #41C0FF; }
   100% {
     background-color: #FF339B; } }
@@ -256,19 +577,49 @@ body {
 @keyframes colors-three {
   0% {
     background-color: #FFF966; }
-  25% {
+  16.5% {
     background-color: #41C0FF; }
-  50% {
+  82.5% {
     background-color: #FF339B; }
   100% {
     background-color: #FFF966; } }
 
-@keyframes colors-two {
+@keyframes colors-four {
+  0% {
+    background-color: #FFF966; }
+  33% {
+    background-color: #41C0FF; }
+  66% {
+    background-color: #FF339B; }
+  100% {
+    background-color: #FFF966; } }
+
+@keyframes colors-five {
   0% {
     background-color: #41C0FF; }
-  25% {
+  16.5% {
     background-color: #FF339B; }
-  50% {
+  82.5% {
     background-color: #FFF966; }
   100% {
     background-color: #41C0FF; } }
+
+@keyframes colors-six {
+  0% {
+    background-color: #41C0FF; }
+  33% {
+    background-color: #FF339B; }
+  66% {
+    background-color: #FFF966; }
+  100% {
+    background-color: #41C0FF; } }
+
+@keyframes fillup {
+  0% {
+    fill: #FF339B; }
+  16.5% {
+    fill: #FFF966; }
+  82.5% {
+    fill: #41C0FF; }
+  100% {
+    fill: #FF339B; } }
