--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,7 +7,6 @@ body
   margin: 0
   padding: 0
   background-color: #222
-  height: 1600px
 
 #polygon
   background-color: #fff
@@ -18,244 +17,50 @@ body
   height: 650px
   width: 100%
 
-.holder
+.landing-holder
   position: relative
   height: 100vh
 
+@import 'lynx';
 
-.frame 
-  position: absolute
-  height: 770px
-  width: 678.4px
-  left: 7%
-  -webkit-perspective: 1000
-
-
-.head 
-  height: 100%
+.work-holder 
+  height: 100vh
   width: 100%
-  -webkit-transform-style: preserve-3d
+  position: relative
+  div
+    position: absolute
+    background: #fff
+  #triangle-left
+    width: 147%;
+    height: 55%
+    right: 0
+    -webkit-clip-path: polygon(100% 0%, 60% 100%, 0 0%)
+    clip-path: polygon(100% 0%, 60% 100%, 0 0%)
+  #triangle-right
+    height: 50%
+    width: 100%
+    right: 0
+    bottom: 0
+    -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%)
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%)
 
-.head > div 
-  position: absolute
-  width: 100%
-  height: 100%
-  background-size: contain
-
-.l10 
-  background: url('../img/l10.png') no-repeat
-  -webkit-transform: translateZ(0px)
-
-.l9 
-  background: url('../img/l9.png') no-repeat
-  -webkit-transform: translateZ(4px)
-
-.l8 
-  background: url('../img/l8.png') no-repeat
-  -webkit-transform: translateZ(8px)
-
-.l7 
-  background: url('../img/l7.png') no-repeat
-  -webkit-transform: translateZ(12px)
-
-.l6 
-  background: url('../img/l6.png') no-repeat
-  -webkit-transform: translateZ(16px)
-
-.l5 
-  background: url('../img/l5.png') no-repeat
-  -webkit-transform: translateZ(20px)
-
-.l4 
-  background: url('../img/l4.png') no-repeat
-  -webkit-transform: translateZ(24px)
-
-.l3 
-  background: url('../img/c3.png') no-repeat
-  -webkit-transform: translateZ(28px)
-  opacity: 0.7
-
-.l2 
-  background: url('../img/l2.png') no-repeat
-  -webkit-transform: translateZ(32px)
-
-.l1 
-  background: url('../img/l1.png') no-repeat
-  -webkit-transform: translateZ(36px)
-
-.l0 
-  background: url('../img/l0.png') no-repeat
-  -webkit-transform: translateZ(40px)
-
-.l6 div
-  position: absolute
-  border-radius: 50%
-  opacity: 0.7
-
-.l6 .circle-0-left, .circle-0-right 
-  width: 15.3px
-  height: 15.3px
-  left: 32.7%
-  top: 69.07%
-  animation: colors 12s infinite
-
-.l6 .circle-1-left, .l6 .circle-1-right 
-  width: 2%
-  height: 2%
-  left: 29.8%
-  top: 67.07%
-  animation: colors-two 12s infinite
-
-.l6 .circle-2-left, .l6 .circle-2-right 
-  width: 12.2px
-  height: 12.2px
-  left: 27.7%
-  top: 64.7%
-  animation: colors-three 12s infinite
-
-.l6 .circle-3-left, .l6 .circle-3-right 
-  width: 11.1px
-  height: 11.1px
-  left: 26%
-  top: 62.6%
-  animation: colors 12s infinite
-
-.l6 .circle-4-left, .l6 .circle-4-right 
-  width: 10px
-  height: 10px
-  left: 24.7%
-  top: 60.6%
-  animation: colors-two 12s infinite
-
-.l6 .circle-5-left, .l6 .circle-5-right 
-  width: 8.2px
-  height: 8.2px
-  left: 23.5%
-  top: 58.7%
-  animation: colors-three 12s infinite
-
-.l6 .circle-6-left, .l6 .circle-6-right 
-  width: 6.2px
-  height: 6.2px
-  left: 22.7%
-  top: 56.94%
-  animation: colors 12s infinite
-
-.l6 .circle-0-right 
-  left: auto
-  right: 32.7%
-
-.l6 .circle-1-right 
-  left: auto
-  right: 29.8%
-
-.l6 .circle-2-right 
-  left: auto
-  right: 27.7%
-
-.l6 .circle-3-right 
-  left: auto
-  right: 26%
-
-.l6 .circle-4-right 
-  left: auto
-  right: 24.7%
-
-.l6 .circle-5-right 
-  left: auto
-  right: 23.5%
-
-.l6 .circle-6-right 
-  left: auto
-  right: 22.7%
-
-.l5 .diamond
-  position: absolute
-  opacity: 0.5
-  left: 46.4%;
-  top: 25.2%;
-  height: 7.25%;
-  width: 7%;
-  -webkit-clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%)
-  clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%)
-  animation: colors 12s infinite
-
-.l4 div
-  position: absolute
-  border-radius: 50%
-  opacity: 0.7
-
-.l4 .circle-1-left, .l4 .circle-1-right 
-  width: 2%
-  height: 2%
-  left: 33.3%
-  top: 36.3%
-  animation: colors-two 12s infinite
-
-.l4 .circle-2-left, .l4 .circle-2-right 
-  width: 1.4%
-  height: 1.4%
-  left: 35.5%
-  top: 34.8%
-  animation: colors-three 12s infinite
-
-.l4 .circle-3-left, .l4 .circle-3-right 
-  width: 1.1%;
-  height: 1.1%;
-  left: 37.5%;
-  top: 33.6%;
-  animation: colors 12s infinite
-
-.l4 .circle-4-left, .l4 .circle-4-right 
-  width: 0.7%;
-  height: 0.7%;
-  left: 39.3%;
-  top: 32.7%;
-  animation: colors-two 12s infinite
-
-.l4 .circle-1-right 
-  left: auto
-  right: 33.3%
-
-.l4 .circle-2-right 
-  left: auto
-  right: 35.5%
-
-.l4 .circle-3-right 
-  left: auto
-  right: 37.5%
-
-.l4 .circle-4-right 
-  left: auto
-  right: 39.3%
-
-.triangle
-  position: absolute
-  -webkit-clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
-  clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
-
-.l2 .triangle 
-  opacity: 0.4
-  height: 42.4px;
-  width: 39.7px;
-  left: 47%;
-  top: 38.3%;
-  animation: colors 12s infinite
-
-.l1 .triangle 
-  opacity: 0.5
-  height: 37px;
-  width: 29px;
-  left: 47.8%;
-  top: 40.3%;
-  animation: colors-two 12s infinite
 
 @keyframes colors 
   0%   
     background-color: $hot-pink
-  25%  
+  16.5%  
     background-color: $yellow
-  50%  
+  82.5%  
+    background-color: $blue
+  100%    
+    background-color: $hot-pink
+
+@keyframes colors-two
+  0%   
+    background-color: $hot-pink
+  33%  
+    background-color: $yellow
+  66%  
     background-color: $blue
   100%    
     background-color: $hot-pink
@@ -263,19 +68,49 @@ body
 @keyframes colors-three
   0%   
     background-color: $yellow
-  25%  
+  16.5%  
     background-color: $blue
-  50%  
+  82.5%  
     background-color: $hot-pink
   100%    
     background-color: $yellow
 
-@keyframes colors-two
+@keyframes colors-four
+  0%   
+    background-color: $yellow
+  33%  
+    background-color: $blue
+  66%  
+    background-color: $hot-pink
+  100%    
+    background-color: $yellow
+
+@keyframes colors-five
   0%   
     background-color: $blue
-  25%  
+  16.5%  
     background-color: $hot-pink
-  50%  
+  82.5%  
     background-color: $yellow
   100%   
     background-color: $blue
+
+@keyframes colors-six
+  0%   
+    background-color: $blue
+  33%  
+    background-color: $hot-pink
+  66%  
+    background-color: $yellow
+  100%   
+    background-color: $blue
+
+@keyframes fillup 
+  0%   
+    fill: $hot-pink
+  16.5%  
+    fill: $yellow
+  82.5%  
+    fill: $blue
+  100%    
+    fill: $hot-pink
