--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,54 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #222; }
-
-#polygon {
-  background-color: #fff;
-  -webkit-clip-path: polygon(0 94%, 100% 71%, 100% 100%, 0% 100%);
-  clip-path: polygon(0 94%, 100% 71%, 100% 100%, 0% 100%);
-  position: absolute;
-  bottom: 0;
-  height: 650px;
-  width: 100%; }
+  background-image: url("../img/bg.jpg");
+  font-family: Barlow, sans-serif;
+  font-size: 14px;
+  letter-spacing: 3px;
+  line-height: 1.3; }
 
 .landing-holder {
   position: relative;
-  height: 100vh; }
+  height: 100vh;
+  margin-right: 40px; }
+
+.title {
+  position: absolute;
+  top: 9%;
+  right: 8%;
+  color: white;
+  text-align: right;
+  width: 30%; }
+  .title h2 {
+    margin-top: 79%;
+    border-top: 1px solid #fff;
+    padding: 17px 0 0 16px; }
+  .title #name-svg {
+    width: 120%;
+    position: absolute;
+    right: 0%; }
+    .title #name-svg .colored {
+      opacity: .8; }
+  .title .name {
+    fill: #fff;
+    opacity: 1; }
+  .title .name-1 {
+    animation: fillup 11s infinite; }
+  .title .name-2 {
+    animation: fillup-two 11s infinite; }
+  .title .name-3 {
+    animation: fillup-three 11s infinite; }
 
 .frame {
-  position: absolute;
   height: 97vh;
   width: 85.5vh;
-  left: 7%;
+  position: absolute;
+  left: 5%;
   -webkit-perspective: 1000; }
 
 .head {
   height: 100%;
-  width: 99.7%;
+  width: 99.9%;
   -webkit-transform-style: preserve-3d; }
 
 .head > div {
@@ -84,119 +107,123 @@ body {
   background: url("../img/l0.png") no-repeat;
   -webkit-transform: translateZ(50px); }
 
+.necklace-svg {
+  -webkit-transform: translateZ(50px); }
+
 .l7 div {
   height: 3px;
-  width: 3px; }
+  width: 3px;
+  opacity: 0.8; }
 
 .l7 .circle:nth-child(1), .l7 .circle:nth-child(23) {
   top: 12.6%;
   left: 21.2%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l7 .circle:nth-child(2), .l7 .circle:nth-child(24) {
   top: 12.9%;
   left: 22.1%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l7 .circle:nth-child(3), .l7 .circle:nth-child(25) {
   top: 13.2%;
   left: 23%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l7 .circle:nth-child(4), .l7 .circle:nth-child(26) {
   top: 13.53%;
   left: 23.9%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l7 .circle:nth-child(5), .l7 .circle:nth-child(27) {
   top: 13.9%;
   left: 24.7%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l7 .circle:nth-child(6), .l7 .circle:nth-child(28) {
   top: 14.3%;
   left: 25.6%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l7 .circle:nth-child(7), .l7 .circle:nth-child(29) {
   top: 14.8%;
   left: 26.4%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l7 .circle:nth-child(8), .l7 .circle:nth-child(30) {
   top: 15.2%;
   left: 27.25%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l7 .circle:nth-child(9), .l7 .circle:nth-child(31) {
   top: 15.7%;
   left: 28.1%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l7 .circle:nth-child(10), .l7 .circle:nth-child(32) {
   top: 16.2%;
   left: 28.9%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l7 .circle:nth-child(11), .l7 .circle:nth-child(33) {
   top: 16.78%;
   left: 29.7%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l7 .circle:nth-child(12), .l7 .circle:nth-child(34) {
   top: 17.4%;
   left: 30.5%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l7 .circle:nth-child(13), .l7 .circle:nth-child(35) {
   top: 18.1%;
   left: 31.4%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l7 .circle:nth-child(14), .l7 .circle:nth-child(36) {
   top: 18.8%;
   left: 32.1%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l7 .circle:nth-child(15), .l7 .circle:nth-child(37) {
   top: 19.53%;
   left: 32.9%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l7 .circle:nth-child(16), .l7 .circle:nth-child(38) {
   top: 20.4%;
   left: 33.65%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l7 .circle:nth-child(17), .l7 .circle:nth-child(39) {
   top: 21.3%;
   left: 34.1%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l7 .circle:nth-child(18), .l7 .circle:nth-child(40) {
   top: 22.2%;
   left: 34.5%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l7 .circle:nth-child(19), .l7 .circle:nth-child(41) {
   top: 23.1%;
   left: 34.8%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l7 .circle:nth-child(20), .l7 .circle:nth-child(42) {
   top: 24.1%;
   left: 34.83%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l7 .circle:nth-child(21), .l7 .circle:nth-child(43) {
   top: 24.95%;
   left: 34.8%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l7 .circle:nth-child(22), .l7 .circle:nth-child(44) {
   top: 25.8%;
   left: 34.5%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l7 .circle:nth-child(23) {
   right: 21.2%; }
@@ -276,49 +303,49 @@ body {
   height: 15.3px;
   left: 32.7%;
   top: 69.07%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l6 .circle-1-left, .l6 .circle-1-right {
   width: 2%;
   height: 2%;
   left: 29.8%;
   top: 67.07%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l6 .circle-2-left, .l6 .circle-2-right {
   width: 12.2px;
   height: 12.2px;
   left: 27.7%;
   top: 64.7%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l6 .circle-3-left, .l6 .circle-3-right {
   width: 11.1px;
   height: 11.1px;
   left: 26%;
   top: 62.6%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l6 .circle-4-left, .l6 .circle-4-right {
   width: 10px;
   height: 10px;
   left: 24.7%;
   top: 60.6%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l6 .circle-5-left, .l6 .circle-5-right {
   width: 8.2px;
   height: 8.2px;
   left: 23.5%;
   top: 58.7%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l6 .circle-6-left, .l6 .circle-6-right {
   width: 6.2px;
   height: 6.2px;
   left: 22.7%;
   top: 56.94%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l6 .circle-0-right {
   left: auto;
@@ -356,7 +383,7 @@ body {
   width: 7%;
   -webkit-clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%);
   clip-path: polygon(50% 0%, 100% 74%, 50% 100%, 0 74%);
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l5 div {
   opacity: 0.6;
@@ -366,19 +393,19 @@ body {
   height: 2%;
   -webkit-clip-path: polygon(50% 100%, 0 0, 100% 0);
   clip-path: polygon(50% 100%, 0 0, 100% 0);
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l5 .triangle-2 {
   top: 48.2%;
-  animation: colors 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l5 .triangle-3 {
   top: 50.2%;
-  animation: colors-four 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l5 .triangle-4 {
   top: 52.2%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l4 div {
   border-radius: 50%;
@@ -389,28 +416,28 @@ body {
   height: 2%;
   left: 33.3%;
   top: 36.3%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l4 .circle-2-left, .l4 .circle-2-right {
   width: 1.4%;
   height: 1.4%;
   left: 35.5%;
   top: 34.8%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l4 .circle-3-left, .l4 .circle-3-right {
   width: 1.1%;
   height: 1.1%;
   left: 37.5%;
   top: 33.6%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l4 .circle-4-left, .l4 .circle-4-right {
   width: 0.7%;
   height: 0.7%;
   left: 39.3%;
   top: 32.7%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l4 .circle-1-right {
   left: auto;
@@ -438,11 +465,11 @@ body {
   width: 39.7px;
   left: 47%;
   top: 38.3%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l1 div {
   opacity: 0.6;
-  height: 1.3%;
+  height: 1.1%;
   width: 1.3%;
   -webkit-clip-path: polygon(20% 100%, 0 0, 100% 20%);
   clip-path: polygon(20% 100%, 0 0, 100% 20%); }
@@ -450,42 +477,42 @@ body {
 .l1 .eye-1 {
   top: 49.4%;
   left: 30%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l1 .eye-2 {
   top: 49.7%;
   left: 31.35%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l1 .eye-3 {
   top: 50%;
   left: 32.7%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .l1 .eye-4 {
   top: 50.3%;
   left: 34.05%;
-  animation: colors-five 8s infinite; }
+  animation: colors-five 11s infinite; }
 
 .l1 .eye-5 {
   top: 50.6%;
   left: 35.4%;
-  animation: colors-three 8s infinite; }
+  animation: colors-three 11s infinite; }
 
 .l1 .eye-6 {
   top: 50.9%;
   left: 36.75%;
-  animation: colors-six 8s infinite; }
+  animation: colors-six 11s infinite; }
 
 .l1 .eye-7 {
   top: 51.2%;
   left: 38.1%;
-  animation: colors 8s infinite; }
+  animation: colors 11s infinite; }
 
 .l1 .eye-8 {
   top: 51.5%;
   left: 39.45%;
-  animation: colors-four 8s infinite; }
+  animation: colors-four 11s infinite; }
 
 .l1 .right {
   left: auto;
@@ -522,16 +549,16 @@ body {
   width: 29px;
   left: 47.8%;
   top: 40.3%;
-  animation: colors-two 8s infinite; }
+  animation: colors-two 11s infinite; }
 
 .necklace-svg svg {
   position: absolute;
-  top: 77%;
-  width: 70%;
-  left: 15%; }
+  top: 76%;
+  width: 62%;
+  left: 19%; }
 
 #necklace path {
-  animation: fillup 8s infinite; }
+  animation: fillup 11s infinite; }
 
 .work-holder {
   height: 100vh;
@@ -556,70 +583,90 @@ body {
 
 @keyframes colors {
   0% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   16.5% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   82.5% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   100% {
-    background-color: #FF339B; } }
+    background-color: #FF0082; } }
 
 @keyframes colors-two {
   0% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   33% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   66% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   100% {
-    background-color: #FF339B; } }
+    background-color: #FF0082; } }
 
 @keyframes colors-three {
   0% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   16.5% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   82.5% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   100% {
-    background-color: #FFF966; } }
+    background-color: #F7FF00; } }
 
 @keyframes colors-four {
   0% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   33% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   66% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   100% {
-    background-color: #FFF966; } }
+    background-color: #F7FF00; } }
 
 @keyframes colors-five {
   0% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   16.5% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   82.5% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   100% {
-    background-color: #41C0FF; } }
+    background-color: #008BFF; } }
 
 @keyframes colors-six {
   0% {
-    background-color: #41C0FF; }
+    background-color: #008BFF; }
   33% {
-    background-color: #FF339B; }
+    background-color: #FF0082; }
   66% {
-    background-color: #FFF966; }
+    background-color: #F7FF00; }
   100% {
-    background-color: #41C0FF; } }
+    background-color: #008BFF; } }
 
 @keyframes fillup {
   0% {
-    fill: #FF339B; }
-  16.5% {
-    fill: #FFF966; }
-  82.5% {
-    fill: #41C0FF; }
+    fill: #FF0082; }
+  33% {
+    fill: #F7FF00; }
+  66% {
+    fill: #008BFF; }
   100% {
-    fill: #FF339B; } }
+    fill: #FF0082; } }
+
+@keyframes fillup-two {
+  0% {
+    fill: #008BFF; }
+  33% {
+    fill: #FF0082; }
+  66% {
+    fill: #F7FF00; }
+  100% {
+    fill: #008BFF; } }
+
+@keyframes fillup-three {
+  0% {
+    fill: #F7FF00; }
+  33% {
+    fill: #FF0082; }
+  66% {
+    fill: #008BFF; }
+  100% {
+    fill: #F7FF00; } }
