--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,27 +1,56 @@
 //colors
-$hot-pink: #FF339B
-$yellow: #FFF966
-$blue: #41C0FF
+$hot-pink: #FF0082
+$yellow: #F7FF00
+$blue: #008BFF
+$colorsAnimation: 11s infinite
 
 body 
   margin: 0
   padding: 0
-  background-color: #222
-
-#polygon
-  background-color: #fff
-  -webkit-clip-path: polygon(0 94%, 100% 71%, 100% 100%, 0% 100%)
-  clip-path: polygon(0 94%, 100% 71%, 100% 100%, 0% 100%)
-  position: absolute
-  bottom: 0
-  height: 650px
-  width: 100%
+  background-image: url('../img/bg.jpg')
+  font-family: Barlow, sans-serif
+  font-size: 14px
+  letter-spacing: 3px
+  line-height: 1.3
 
 .landing-holder
   position: relative
   height: 100vh
+  margin-right: 40px
 
-@import 'lynx';
+.title
+  position: absolute
+  top: 9%
+  right: 8%
+  color: white
+  text-align: right
+  width: 30%
+  h2
+    margin-top: 79%
+    border-top: 1px solid #fff
+    padding: 17px 0 0 16px
+
+  #name-svg 
+    width: 120%
+    position: absolute
+    right: 0%
+    .colored
+      opacity: .8
+
+  .name
+    fill: #fff
+    opacity: 1
+
+  .name-1
+    animation: fillup $colorsAnimation
+
+  .name-2
+    animation: fillup-two $colorsAnimation
+
+  .name-3
+    animation: fillup-three $colorsAnimation
+
+@import 'lynx'
 
 .work-holder 
   height: 100vh
@@ -31,7 +60,7 @@ body
     position: absolute
     background: #fff
   #triangle-left
-    width: 147%;
+    width: 147%
     height: 55%
     right: 0
     -webkit-clip-path: polygon(100% 0%, 60% 100%, 0 0%)
@@ -108,9 +137,29 @@ body
 @keyframes fillup 
   0%   
     fill: $hot-pink
-  16.5%  
+  33%  
     fill: $yellow
-  82.5%  
+  66%  
     fill: $blue
   100%    
     fill: $hot-pink
+
+@keyframes fillup-two 
+  0%   
+    fill: $blue
+  33%  
+    fill: $hot-pink
+  66%  
+    fill: $yellow
+  100%    
+    fill: $blue
+
+@keyframes fillup-three 
+  0%   
+    fill: $yellow
+  33%  
+    fill: $hot-pink
+  66%  
+    fill: $blue
+  100%    
+    fill: $yellow
