--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,8 +8,9 @@ body
   margin: 0
   padding: 0
   background-image: url('../img/bg.jpg')
-  font-family: Barlow, sans-serif
+  font-family: Assistant, sans-serif
   font-size: 14px
+  font-weight: 300
   letter-spacing: 3px
   line-height: 1.3
 
@@ -17,6 +18,9 @@ body
   position: relative
   height: 100vh
   margin-right: 40px
+
+.off-page
+  right: -100px
 
 .title
   position: absolute
@@ -26,9 +30,55 @@ body
   text-align: right
   width: 30%
   h2
-    margin-top: 79%
+    margin-top: 63%
     border-top: 1px solid #fff
     padding: 17px 0 0 16px
+    font-weight: 300
+  h3
+    position: relative
+    .triangle
+      opacity: 0.8
+      display: inline-block
+      width: 11px
+      height: 11px
+      position: absolute
+      right: 0
+      top: 5px
+      -webkit-clip-path: polygon(0 0, 0% 100%, 80% 50%) !important;
+      clip-path: polygon(0 0, 0% 100%, 80% 50%) !important;
+      animation: colors-three 11s infinite
+      -webkit-transition: all 400ms ease-in
+      -moz-transition: all 400ms ease-in
+      transition: all 500ms ease-in
+    .triangle:first-of-type
+      margin-left: 7px
+    .triangle:nth-of-type(2)
+      animation: colors-six 11s infinite
+      right: 15px
+      transition-delay: 100ms
+    .triangle:nth-of-type(3)
+      animation: colors-two 11s infinite
+      right: 30px
+      transition-delay: 200ms
+    span
+      margin-right: 50px
+      &:hover 
+        cursor: pointer
+        .triangle
+          right: -40px
+        .triangle:nth-of-type(2)
+          right: -25px
+        .triangle:nth-of-type(3)
+          right: -10px
+  h3:first-of-type
+    margin-top: 33%
+    .triangle:first-of-type
+      margin-left: 7px
+      animation: colors 11s infinite
+    .triangle:nth-of-type(2)
+      animation: colors-six 11s infinite
+    .triangle:nth-of-type(3)
+      animation: colors-four 11s infinite
 
   #name-svg 
     width: 120%
