custom cursor & social icons

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,6 +3,8 @@ $hot-pink: #FF0082
 $yellow: #F7FF00
 $blue: #008BFF
 $colorsAnimation: 11s infinite
+$name-rect-dur: 3s 
+$name-rect-bez: cubic-bezier(0, 0.21, 0.58, 1)
 
 body 
   margin: 0
@@ -13,6 +15,16 @@ body
   font-weight: 300
   letter-spacing: 3px
   line-height: 1.3
+  cursor: none
+
+#ball 
+  position: absolute
+  width: 13px
+  height: 13px
+  animation: colors $colorsAnimation
+  border-radius: 50%
+  pointer-events: none
+  z-index: 10000
 
 .landing-holder
   position: relative
@@ -63,7 +75,6 @@ body
     span
       margin-right: 50px
       &:hover 
-        cursor: pointer
         .triangle
           right: -40px
         .triangle:nth-of-type(2)
@@ -71,7 +82,7 @@ body
         .triangle:nth-of-type(3)
           right: -10px
   h3:first-of-type
-    margin-top: 33%
+    margin-top: 31%
     .triangle:first-of-type
       margin-left: 7px
       animation: colors 11s infinite
@@ -79,13 +90,20 @@ body
       animation: colors-six 11s infinite
     .triangle:nth-of-type(3)
       animation: colors-four 11s infinite
+  .social img
+    height: 25px
+    margin-left: 5px
+    transition: all 0.2s ease-in
+    opacity: 0.8
+    &:hover
+      opacity: 1
 
   #name-svg 
     width: 120%
     position: absolute
     right: 0%
     .colored
-      opacity: .8
+      opacity: 0.8
 
   .name
     fill: #fff
@@ -213,3 +231,4 @@ body
     fill: $blue
   100%    
     fill: $yellow
+
