--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,17 @@ body {
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 3px;
-  line-height: 1.3; }
+  line-height: 1.3;
+  cursor: none; }
+
+#ball {
+  position: absolute;
+  width: 13px;
+  height: 13px;
+  animation: colors 11s infinite;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 10000; }
 
 .landing-holder {
   position: relative;
@@ -56,16 +66,14 @@ body {
       transition-delay: 200ms; }
     .title h3 span {
       margin-right: 50px; }
-      .title h3 span:hover {
-        cursor: pointer; }
-        .title h3 span:hover .triangle {
-          right: -40px; }
-        .title h3 span:hover .triangle:nth-of-type(2) {
-          right: -25px; }
-        .title h3 span:hover .triangle:nth-of-type(3) {
-          right: -10px; }
+      .title h3 span:hover .triangle {
+        right: -40px; }
+      .title h3 span:hover .triangle:nth-of-type(2) {
+        right: -25px; }
+      .title h3 span:hover .triangle:nth-of-type(3) {
+        right: -10px; }
   .title h3:first-of-type {
-    margin-top: 33%; }
+    margin-top: 31%; }
     .title h3:first-of-type .triangle:first-of-type {
       margin-left: 7px;
       animation: colors 11s infinite; }
@@ -73,12 +81,19 @@ body {
       animation: colors-six 11s infinite; }
     .title h3:first-of-type .triangle:nth-of-type(3) {
       animation: colors-four 11s infinite; }
+  .title .social img {
+    height: 25px;
+    margin-left: 5px;
+    transition: all 0.2s ease-in;
+    opacity: 0.8; }
+    .title .social img:hover {
+      opacity: 1; }
   .title #name-svg {
     width: 120%;
     position: absolute;
     right: 0%; }
     .title #name-svg .colored {
-      opacity: .8; }
+      opacity: 0.8; }
   .title .name {
     fill: #fff;
     opacity: 1; }
