--- a/css/main.css
+++ b/css/main.css
@@ -714,36 +714,33 @@ body {
   left: 70%;
   transform: translateX(100%); }
 
-.work-text, .work-img {
-  display: none;
-  padding: 140px 40px; }
-
-.work-text.active, .work-img.active {
-  display: block; }
-
 .work-img {
-  position: relative; }
+  position: relative;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
   .work-img img {
-    width: 100%;
+    width: 80%;
     z-index: 1000; }
   .work-img:before {
     content: '';
-    width: 93%;
+    width: 86%;
     height: 70%;
     clip-path: polygon(2% 100%, 0% 0%, 100% 5%);
     animation: colors-three 11s infinite;
     z-index: -1;
-    left: 20px;
+    left: 6%;
     top: 18%;
     position: absolute; }
   .work-img:after {
     content: '';
-    width: 85%;
+    width: 70%;
     height: 42%;
-    clip-path: polygon(100% 0%, 0% 100%, 100% 75%);
+    clip-path: polygon(99% 24%, 0% 97%, 100% 83%);
     animation: colors-five 11s infinite;
     z-index: -1;
-    right: 20px;
+    right: 6%;
     top: 44%;
     position: absolute; }
 
